--- a/css/send.css
+++ b/css/send.css
@@ -5,37 +5,45 @@
 
 #td_friend_list{
     vertical-align: top;
-    width: 10%;
+    width: 15%;
     height: 390px;
     box-shadow: 0px 0px 4px 0px white;
 }
 
 #td_send_list{
     vertical-align: top;
-    width: 10%;
+    width: 15%;
     height: 390px;
     box-shadow: 0px 0px 4px 0px white;
 }
 
 #td_message{
     vertical-align: top;
-    width: 80%;
+    width: 45%;
     height: 390px;
     box-shadow: 0px 0px 4px 0px white;
-    padding: 5px;
+    padding: 10px;
+}
+
+#td_message_end{
+    vertical-align: top;
+    width: 25%;
+    height: 390px;
+    box-shadow: 0px 0px 4px 0px white;
+    padding: 10px;
 }
 
 
 #div_friend_list{
     height: 390px;
     box-shadow: 0px 0px 4px 0px white;
-    overflow: scroll;
+    overflow-y:  scroll;
 }
 
 #div_send_list{
     height: 390px;
     box-shadow: 0px 0px 4px 0px white;
-    overflow: scroll;
+    overflow-y:  scroll;
 }
 
 .button_send{
@@ -60,3 +68,57 @@
 
 
 /* MESSAGE ZONE */
+
+
+#title_text {
+    margin-left: 2%;
+    width: 86%;
+}
+
+#text_text {
+    text-align: top;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    width: 100%;
+    height: 40%;
+    resize:none;
+}
+
+#img_preview {
+    width: 45%;
+    height: 46%;
+    border-radius: 5px;
+    margin-top: 5px;
+    border: solid 1px white;
+}
+
+#moins {
+    width: 30%;
+    height: 7%;
+}
+
+#time{
+    width: 40%;
+    text-align: center;
+}
+
+#plus {
+    width: 30%;
+    height: 7%;
+}
+
+#button_send{
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    height: 13%;
+    font-size: 25px;
+        border-radius: 5px;
+}
+
+#feedback {
+    width: 100%;
+    border: solid 1px white;
+    height: 72%;
+    border-radius: 5px;    
+}
