--- a/css/friends.css
+++ b/css/friends.css
@@ -101,6 +101,7 @@
     text-align: center;
     border-radius: 5px;
     overflow: hidden;
+    background-color: rgba(102,149,178,0.3);
     
 }
 
