--- a/css/send.css
+++ b/css/send.css
@@ -62,6 +62,9 @@
     margin-top: 2px;
     border: solid 1px white;
     cursor: pointer;
+    height: 35px;
+	background-color: rgba(102,149,178,0.60);
+	color: white;
 }
 
 .friend_mess:hover{
@@ -74,7 +77,7 @@
 
 #title_text {
     margin-left: 2%;
-    width: 86%;
+    width: 89%;
         border-radius: 5px;
 }
 
@@ -82,33 +85,30 @@
     margin-bottom: 20px;
     margin-top: 5px;
     width: 100%;
-    height: 40%;
     resize:none;
     border-radius: 5px;
 }
 
 #img_preview {
-    width: 45%;
-    height: 46%;
-    border-radius: 5px;
-    margin-top: 5px;
-    border: solid 1px white;
+	width: 90%;
+	height: 200px;
+	border-radius: 5px;
+	margin-top: 5px;
+	border: 1px solid #FFF;
 }
 
-#moins {
-    width: 25%;
-    height: 7%;
-}
 
 #time{
-    width: 40%;
-    text-align: center;
+	width: 100%;
+	text-align: center;
+	font-size: 18px;
+	color: white;
+	background-color: rgba(100,151,183,1);
+	border: none;
+	border-radius: 5px;
+	margin-left: 5px;
 }
 
-#plus {
-    width: 25%;
-    height: 7%;
-}
 
 #button_send{
     width: 100%;
@@ -120,8 +120,8 @@
 }
 
 #feedback {
-    width: 100%;
-    border: solid 1px white;
-    height: 76%;
-    border-radius: 5px;    
+width: 100%;
+border: 1px solid #FFF;
+height: 83px;
+border-radius: 5px;
 }
