--- a/css/settings.css
+++ b/css/settings.css
@@ -4,7 +4,7 @@
 }
 
 .text {
-	padding: 10px;
+	padding: 8vpx;
 	font-size: 16px;
 	margin-left: 25px;
 }
@@ -61,3 +61,7 @@ margin-top : -5px;
     margin-top: 5px;
     border: 1px solid #FFF;
 }
+
+#design_table {
+	height:80%;	
+	}
