--- a/css/friends.css
+++ b/css/friends.css
@@ -59,6 +59,9 @@
 .people:hover{
     box-shadow: 0px 0px 6px 0px white;
     transform: skew(-10deg,-5deg);
+    -webkit-transition: transform 0.6s;
+    -ms-transition: transform 0.6s;
+    -moz-transition: transform 0.6s;
     transition: transform 0.6s;
 }
 
@@ -167,6 +170,9 @@
 .div_person_request:hover{
     box-shadow:0px 0px 4px 0px white;
     transform: rotate(360deg);
+    -webkit-transition: transform 0.6s;
+    -moz-transition: transform 0.6s;
+    -ms-transition: transform 0.6s;
     transition: transform 0.6s;
 }
 
